syntax = "proto3";

package continuonxr.pixelbrain.v1;

import "proto/rlds_episode.proto";

// Draft bridge API between ContinuonXR and PixelBrain/OS.

service PixelBrainBridge {
  // XR subscribes to robot state for rendering/teleop feedback.
  rpc StreamRobotState(StateRequest) returns (stream RobotStateEnvelope);

  // XR sends normalized commands derived from teleop input.
  rpc SendCommand(CommandEnvelope) returns (CommandAck);
}

message StateRequest {
  string client_id = 1;
}

message RobotStateEnvelope {
  continuonxr.rlds.v1.RobotState state = 1;
}

message CommandEnvelope {
  string client_id = 1;
  repeated float command = 2; // normalized vector matching Robot API expectation
}

message CommandAck {
  bool accepted = 1;
  string message = 2;
}

