syntax = "proto3";

package continuonxr.rlds.v1;

// Draft RLDS schema for ContinuonXR. Matches docs/rlds-schema.md.

message EpisodeMetadata {
  string xr_mode = 1;           // trainer | workstation | observer
  string control_role = 2;      // human_teleop | human_supervisor | human_dev_xr
  string environment_id = 3;    // lab-mock, pbos-dev01, etc.
  repeated string tags = 4;

  SoftwareVersions software = 5;
}

message SoftwareVersions {
  string xr_app = 1;
  string pixelbrain_os = 2;
  string glove_firmware = 3;
}

message Episode {
  EpisodeMetadata metadata = 1;
  repeated Step steps = 2;
}

message Step {
  Observation observation = 1;
  Action action = 2;
  bool is_terminal = 3;
}

message Observation {
  Pose headset_pose = 1;
  Pose right_hand_pose = 2;
  Pose left_hand_pose = 3;
  RobotState robot_state = 4;
  GloveFrame glove = 5;

  string video_frame_id = 6;
  string depth_frame_id = 7;
  Diagnostics diagnostics = 8;
}

message Action {
  repeated float command = 1; // normalized control vector
  string source = 2;          // e.g., human_teleop_xr
  Annotation annotation = 3;
  UiAction ui_action = 4;
}

message Pose {
  repeated float position = 1;      // [x, y, z]
  repeated float orientation_quat = 2; // [x, y, z, w]
  bool valid = 3;
}

message RobotState {
  int64 timestamp_nanos = 1;
  repeated float joint_positions = 2;
  Pose end_effector_pose = 3;
  bool gripper_open = 4;
}

message GloveFrame {
  int64 timestamp_nanos = 1;
  repeated float flex = 2; // size 5, normalized
  repeated float fsr = 3;  // size 8, normalized
  repeated float orientation_quat = 4; // size 4
  repeated float accel = 5; // size 3, m/s^2
}

message Diagnostics {
  float latency_ms = 1;
  int32 glove_drops = 2;
  int32 ble_rssi = 3;
  float glove_sample_rate_hz = 4;
}

message Annotation {
  string kind = 1;
  map<string, string> fields = 2;
}

message UiAction {
  string action_type = 1;
  map<string, string> context = 2;
}

